<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ac.id.polinema.delaundry.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_ToCreateTransactions"
            app:destination="@id/createTransactionActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_transaction"
        android:name="ac.id.polinema.delaundry.ui.transactions.TransactionsFragment"
        android:label="@string/title_transactions"
        tools:layout="@layout/fragment_transaction" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="ac.id.polinema.delaundry.ui.histroy.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="ac.id.polinema.delaundry.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

    <activity
        android:id="@+id/createTransactionActivity"
        android:name="ac.id.polinema.delaundry.CreateTransactionActivity"
        android:label="activity_create_transaction"
        tools:layout="@layout/activity_create_transaction" />
</navigation>
