<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLight"
    tools:context=".ui.create_account.CreateAccountFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/NamaInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:textColorHint="@android:color/primary_text_light"
        app:boxBackgroundColor="@color/backgroundLight2"
        app:boxStrokeColor="@color/colorPrimary"
        app:helperTextTextColor="@android:color/primary_text_light"
        app:hintTextColor="@android:color/primary_text_light"
        app:helperTextEnabled="true"
        app:helperText="@string/helper_nama"
        app:layout_constraintBottom_toTopOf="@+id/AlamatInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/primary_text_light"
            android:textColor="@android:color/primary_text_light"
            android:hint="@string/label_nama" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/AlamatInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:textColorHint="@android:color/primary_text_light"
        app:boxBackgroundColor="@color/backgroundLight2"
        app:boxStrokeColor="@color/colorPrimary"
        app:helperTextTextColor="@android:color/primary_text_light"
        app:hintTextColor="@android:color/primary_text_light"
        app:helperTextEnabled="true"
        app:helperText="@string/helper_alamat"
        app:layout_constraintBottom_toTopOf="@+id/PasswordInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/primary_text_light"
            android:textColor="@android:color/primary_text_light"
            android:hint="@string/label_alamat" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PasswordInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:textColorHint="@android:color/primary_text_light"
        app:boxBackgroundColor="@color/backgroundLight2"
        app:boxStrokeColor="@color/colorPrimary"
        app:helperTextTextColor="@android:color/primary_text_light"
        app:hintTextColor="@android:color/primary_text_light"
        app:helperTextEnabled="true"
        app:helperText="Buat Password Minimal 8 Karakter"
        app:layout_constraintBottom_toTopOf="@+id/Konfirmasi_PasswordInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/primary_text_light"
            android:textColor="@android:color/primary_text_light"
            android:hint="@string/label_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Konfirmasi_PasswordInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:textColorHint="@android:color/primary_text_light"
        app:boxBackgroundColor="@color/backgroundLight2"
        app:boxStrokeColor="@color/colorPrimary"
        app:helperTextTextColor="@android:color/primary_text_light"
        app:hintTextColor="@android:color/primary_text_light"
        app:helperText="@string/helper_confirm_password"
        app:helperTextEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/primary_text_light"
            android:textColor="@android:color/primary_text_light"
            android:hint="@string/label_confirm_password" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/label_create_account"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>