<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment"
    android:background="@color/backgroundLight" >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/No_TeleponInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:textColorHint="@android:color/primary_text_light"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:counterTextColor="@android:color/primary_text_light"
        app:boxBackgroundColor="@color/backgroundLight2"
        app:boxStrokeColor="@color/colorPrimary"
        app:helperTextTextColor="@android:color/primary_text_light"
        app:hintTextColor="@android:color/primary_text_light"
        app:helperText="@string/helper_no_handphone"
        app:helperTextEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/PasswordInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_nohandphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/primary_text_light"
            android:textColor="@android:color/primary_text_light"
            android:hint="@string/label_no_handphone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PasswordInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:textColorHint="@android:color/primary_text_light"
        app:boxBackgroundColor="@color/backgroundLight2"
        app:boxStrokeColor="@color/colorPrimary"
        app:endIconMode="password_toggle"
        app:endIconTint="@android:color/primary_text_light"
        app:helperText="@string/helper_password"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@android:color/primary_text_light"
        app:hintTextColor="@android:color/primary_text_light"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_password"
            android:inputType="textPassword"
            android:textColor="@android:color/primary_text_light"
            android:textColorHint="@android:color/primary_text_light" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/label_login"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>